# RelayMan

./: Cargo.toml
examples/: client.rs  server.rs
src/: lib.rs  main.rs
src/client/: connection.rs  mod.rs  response.rs
src/common/: adress.rs  mod.rs
src/common/packets/: avalibile.rs  connect_on.rs  info.rs  info_request.rs  mod.rs  new_request.rs  register.rs  register_response.rs  request.rs  request_final.rs  request_response.rs  search.rs  search_response.rs  unregister.rs
src/server/: connect.rs  mod.rs  on_info.rs  on_request.rs  on_request_final.rs  on_request_response.rs  on_search.rs
