[package]
name = "relay-man"
version = "0.2.5"
description = "Peer to peer library"
edition = "2021"
authors = ["konkitoman"]
repository = "https://github.com/ManStudio/RelayMan"
license = "GPL-3.0"
keywords = ["p2p", "client", "server", "networking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["client", "server"]
server = []
client = []

[[example]]
name = "server"

[[example]]
name = "client"

[dependencies]
bytes-kman = "0.1"
env_logger = "0.10.0"
local-ip-address = "0.5.0"
log = "0.4.17"
polling = "2.5.2"
rand = "0.8.5"
socket2 = "0.4.7"
